Adicionando header e footer

--- a/src/front/pages/consultas.html
+++ b/src/front/pages/consultas.html
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+    <div id="header"></div>
+
     <h1>Agendamento de Consulta</h1>
     <form id="form-consulta">
         <label for="nome">Nome:</label>
@@ -32,6 +34,8 @@
 
         <button type="submit">Agendar Consulta</button>
     </form>
+
+    <div id="footer"></div>
 </body>
 
 </html>
