--- a/src/front/pages/historico.html
+++ b/src/front/pages/historico.html
@@ -4,8 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Historico</title>
+    <link rel="stylesheet" href="../assets/css/historico.css">
+    <script src="../assets/js/hi.js"></script> 
 </head>
 <body>
-    
+    <div id="header"></div>
+    <h1>Histórico de Atendimentos</h1>
+
+  <table id="tabela-historico">
+    <thead>
+      <tr>
+        <th>Paciente</th>
+        <th>Especialidade</th>
+        <th>Data</th>
+        <th>Horário</th>
+      </tr>
+    </thead>
+    <tbody>
+      <!-- Lançar o histórico AQ -->
+    </tbody>
+  </table>
+
+  <div id="footer"></div>
+  
 </body>
 </html>
