ADD: adicionando os componentes nas páginas

--- a/src/front/pages/consultas.html
+++ b/src/front/pages/consultas.html
@@ -36,6 +36,15 @@
     </form>
 
     <div id="footer"></div>
+    <script>
+        fetch('../components/header.html')
+            .then(res => res.text())
+            .then(data => document.getElementById('header').innerHTML = data);
+
+        fetch('../components/footer.html')
+            .then(res => res.text())
+            .then(data => document.getElementById('footer').innerHTML = data);
+    </script>
 </body>
 
 </html>
