--- a/src/front/pages/historico.html
+++ b/src/front/pages/historico.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Historico</title>
-    <link rel="stylesheet" href="../assets/css/historico.css">
-    <script src="../assets/js/hi.js"></script> 
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Historico</title>
+  <link rel="stylesheet" href="../assets/css/historico.css">
+  <script src="../assets/js/hi.js"></script>
 </head>
+
 <body>
-    <div id="header"></div>
-    <h1>Histórico de Atendimentos</h1>
+  <div id="header"></div>
+  <h1>Histórico de Atendimentos</h1>
 
   <table id="tabela-historico">
     <thead>
@@ -26,6 +28,15 @@
   </table>
 
   <div id="footer"></div>
-  
+  <script>
+    fetch('../components/header.html')
+      .then(res => res.text())
+      .then(data => document.getElementById('header').innerHTML = data);
+
+    fetch('../components/footer.html')
+      .then(res => res.text())
+      .then(data => document.getElementById('footer').innerHTML = data);
+  </script>
 </body>
+
 </html>
