--- a/src/front/pages/medicos.html
+++ b/src/front/pages/medicos.html
@@ -8,5 +8,15 @@
 <body>
     <div id="header"></div>
     <div id="footer"></div>
+    
+    <script>
+        fetch('components/header.html')
+            .then(res => res.text())
+            .then(data => document.getElementById('header').innerHTML = data);
+
+        fetch('components/footer.html')
+            .then(res => res.text())
+            .then(data => document.getElementById('footer').innerHTML = data);
+    </script>
 </body>
 </html>
