--- a/src/front/pages/pacientes.html
+++ b/src/front/pages/pacientes.html
@@ -10,11 +10,11 @@
     <div id="footer"></div>
     
     <script>
-        fetch('components/header.html')
+        fetch('../components/header.html')
             .then(res => res.text())
             .then(data => document.getElementById('header').innerHTML = data);
 
-        fetch('components/footer.html')
+        fetch('../components/footer.html')
             .then(res => res.text())
             .then(data => document.getElementById('footer').innerHTML = data);
     </script>
