ADD: adicionado outros dados de médico

--- a/src/front/pages/medicos.html
+++ b/src/front/pages/medicos.html
@@ -17,6 +17,11 @@
                 <th>Nome</th>
                 <th>CRM</th>
                 <th>Especialidade</th>
+                <th>CPF</th>
+                <th>Sexo</th>
+                <th>Data de Nascimento</th>
+                <th>Telefone</th>
+                <th>Email</th>
             </tr>
         </thead>
         <tbody>
@@ -24,20 +29,65 @@
                 <td>Dra. Ana Silva</td>
                 <td>123456/SP</td>
                 <td>Cardiologia</td>
+                <td>123.456.789-01</td>
+                <td>Feminino</td>
+                <td>15/04/1975</td>
+                <td>(11) 91234-5678</td>
+                <td>ana.silva@clinicamed.com</td>
             </tr>
             <tr>
                 <td>Dr. João Pereira</td>
                 <td>654321/RJ</td>
                 <td>Ortopedia</td>
+                <td>234.567.890-12</td>
+                <td>Masculino</td>
+                <td>08/09/1980</td>
+                <td>(21) 99876-5432</td>
+                <td>joao.pereira@clinicamed.com</td>
             </tr>
             <tr>
                 <td>Dra. Marina Costa</td>
                 <td>789012/MG</td>
                 <td>Pediatria</td>
+                <td>345.678.901-23</td>
+                <td>Feminino</td>
+                <td>22/12/1983</td>
+                <td>(31) 98765-4321</td>
+                <td>marina.costa@clinicamed.com</td>
             </tr>
-            <!-- Adicione mais médicos aqui -->
+            <tr>
+                <td>Dr. Lucas Andrade</td>
+                <td>456789/SP</td>
+                <td>Dermatologia</td>
+                <td>456.789.012-34</td>
+                <td>Masculino</td>
+                <td>03/06/1979</td>
+                <td>(11) 93456-7890</td>
+                <td>lucas.andrade@clinicamed.com</td>
+            </tr>
+            <tr>
+                <td>Dra. Paula Mendes</td>
+                <td>321654/RS</td>
+                <td>Ginecologia</td>
+                <td>567.890.123-45</td>
+                <td>Feminino</td>
+                <td>10/10/1987</td>
+                <td>(51) 91234-5678</td>
+                <td>paula.mendes@clinicamed.com</td>
+            </tr>
+            <tr>
+                <td>Dr. Bruno Almeida</td>
+                <td>112233/BA</td>
+                <td>Neurologia</td>
+                <td>678.901.234-56</td>
+                <td>Masculino</td>
+                <td>19/03/1972</td>
+                <td>(71) 99887-6655</td>
+                <td>bruno.almeida@clinicamed.com</td>
+            </tr>
         </tbody>
     </table>
+    
     <div id="footer"></div>
 
     <script>
