--- a/src/front/pages/consultas.html
+++ b/src/front/pages/consultas.html
@@ -12,28 +12,30 @@
 <body>
     <div id="header"></div>
 
-    <h1>Agendamento de Consulta</h1>
-    <form id="form-consulta">
-        <label for="nome">Nome:</label>
-        <input type="text" id="nome" required />
+    <div id="Formulario">
+        <h1>Agendamento de Consulta</h1>
+        <form id="form-consulta">
+            <label for="nome">Nome:</label>
+            <input type="text" id="nome" required />
 
-        <label for="especialidade">Especialidade:</label>
-        <select id="especialidade" required>
-            <option value="">Selecione</option>
-            <option>Clínico Geral</option>
-            <option>Cardiologia</option>
-            <option>Dermatologia</option>
-            <option>Ortopedia</option>
-        </select>
+            <label for="especialidade">Especialidade:</label>
+            <select id="especialidade" required>
+                <option value="">Selecione</option>
+                <option>Clínico Geral</option>
+                <option>Cardiologia</option>
+                <option>Dermatologia</option>
+                <option>Ortopedia</option>
+            </select>
 
-        <label for="data">Data:</label>
-        <input type="date" id="data" required />
+            <label for="data">Data:</label>
+            <input type="date" id="data" required />
 
-        <label for="hora">Horário (08:00 às 18:00):</label>
-        <input type="time" id="hora" required />
+            <label for="hora">Horário (08:00 às 18:00):</label>
+            <input type="time" id="hora" required />
 
-        <button type="submit">Agendar Consulta</button>
-    </form>
+            <button type="submit">Agendar Consulta</button>
+        </form>
+    </div>
 
     <div id="footer"></div>
     <script>
