Alterações no CSS da home, header e footer

--- a/src/front/index.html
+++ b/src/front/index.html
@@ -18,10 +18,16 @@
     <section class="hero">
         <div class="container">
             <h2>Bem-vindo à Clínica Médica</h2>
-            <p>Oferecemos soluções modernas para o seu negócio.</p>
-            <a href="#servicos" class="btn">Saiba Mais</a>
+            <p>Trabalho Prático de Programação Orientada por Objetos</p>
         </div>
     </section>
+
+    <!-- Sobre -->
+     <section>
+        <div class="Sobre">
+            
+        </div>
+     </section>
 
     <!-- Serviços -->
     <section class="servicos" id="servicos">
