Organizando as sections e add logo + nome provisório

--- a/src/front/index.html
+++ b/src/front/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage</title>
+    <title>HorusMed</title>
     <link rel="stylesheet" href="/src/front/assets/css/home.css">
     <link href="https://fonts.googleapis.com/css2?family=Exo&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -17,43 +17,33 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="container">
-            <h2>Bem-vindo à Clínica Médica</h2>
+            <img src="/src/front/assets/img/Hero.png" alt="">
+            <h2>Bem-vindo ao HorusMed</h2>
             <p>Trabalho Prático de Programação Orientada por Objetos</p>
         </div>
     </section>
 
-    <!-- Sobre -->
-    <section>
-        <div class="Sobre">
-            <h2>Sobre o Projeto</h2>
-            <p>
-                Este projeto tem como objetivo o desenvolvimento de um sistema completo de gestão de consultas médicas
-                para uma clínica, utilizando os princípios da Programação Orientada a Objetos (POO).
-            </p>
-
-            <h3>Integrantes da Equipe</h3>
-            <div class="equipe">
-                <div class="membro">
-                    <img src="/src/front/assets/img/Bruno.jpeg" alt="Foto de Bruno Gustavo Rezende">
-                    <p>Bruno Gustavo Rezende</p>
-                </div>
-                <div class="membro">
-                    <img src="/src/front/assets/img/Caio.png" alt="Foto de Caio Henrique Queiroz dos Santos">
-                    <p>Caio Henrique Queiroz</p>
-                </div>
-                <div class="membro">
-                    <img src="/src/front/assets/img/Cleber.png" alt="Foto de Cleber Gomes Junior">
-                    <p>Cleber Gomes Junior</p>
-                </div>
-                <div class="membro">
-                    <img src="/src/front/assets/img/Eric.jpeg" alt="Foto de Eric Carvalho Pedro">
-                    <p>Eric Carvalho Pedro</p>
-                </div>
-
-                <div class="membro">
-                    <img src="/src/front/assets/img/Victor.png" alt="Foto de Victor Lucas de Ângela Martins">
-                    <p>Victor Lucas de Ângela</p>
-                </div>
+    <!-- Navegação -->
+    <section class="acesso-rapido">
+        <div class="container">
+            <h2>Navegue pelo Sistema</h2>
+            <div class="links-sistema">
+                <a href="/src/front/pages/medicos.html" class="link-box">
+                    <i class="fas fa-user-md"></i>
+                    <span>Médicos</span>
+                </a>
+                <a href="/src/front/pages/pacientes.html" class="link-box">
+                    <i class="fas fa-user-injured"></i>
+                    <span>Pacientes</span>
+                </a>
+                <a href="/src/front/pages/consultas.html" class="link-box">
+                    <i class="fas fa-calendar-check"></i>
+                    <span>Consultas</span>
+                </a>
+                <a href="/src/front/pages/historico.html" class="link-box">
+                    <i class="fas fa-file-medical-alt"></i>
+                    <span>Histórico</span>
+                </a>
             </div>
         </div>
     </section>
@@ -94,31 +84,41 @@
         </div>
     </section>
 
-    <!-- Navegação -->
-    <section class="acesso-rapido">
-        <div class="container">
-            <h2>Navegue pelo Sistema</h2>
-            <div class="links-sistema">
-                <a href="/src/front/pages/medicos.html" class="link-box">
-                    <i class="fas fa-user-md"></i>
-                    <span>Médicos</span>
-                </a>
-                <a href="/src/front/pages/pacientes.html" class="link-box">
-                    <i class="fas fa-user-injured"></i>
-                    <span>Pacientes</span>
-                </a>
-                <a href="/src/front/pages/consultas.html" class="link-box">
-                    <i class="fas fa-calendar-check"></i>
-                    <span>Consultas</span>
-                </a>
-                <a href="/src/front/pages/historico.html" class="link-box">
-                    <i class="fas fa-file-medical-alt"></i>
-                    <span>Histórico</span>
-                </a>
+    <!-- Sobre -->
+    <section>
+        <div class="Sobre" id="Sobre">
+            <h2>Sobre o Projeto</h2>
+            <p>
+                Este projeto tem como objetivo o desenvolvimento de um sistema completo de gestão de consultas médicas
+                para uma clínica, utilizando os princípios da Programação Orientada a Objetos (POO).
+            </p>
+
+            <h3>Integrantes da Equipe</h3>
+            <div class="equipe">
+                <div class="membro">
+                    <img src="/src/front/assets/img/Bruno.jpeg" alt="Foto de Bruno Gustavo Rezende">
+                    <p>Bruno Gustavo Rezende</p>
+                </div>
+                <div class="membro">
+                    <img src="/src/front/assets/img/Caio.png" alt="Foto de Caio Henrique Queiroz dos Santos">
+                    <p>Caio Henrique Queiroz</p>
+                </div>
+                <div class="membro">
+                    <img src="/src/front/assets/img/Cleber.png" alt="Foto de Cleber Gomes Junior">
+                    <p>Cleber Gomes Junior</p>
+                </div>
+                <div class="membro">
+                    <img src="/src/front/assets/img/Eric.jpeg" alt="Foto de Eric Carvalho Pedro">
+                    <p>Eric Carvalho Pedro</p>
+                </div>
+
+                <div class="membro">
+                    <img src="/src/front/assets/img/Victor.png" alt="Foto de Victor Lucas de Ângela Martins">
+                    <p>Victor Lucas de Ângela</p>
+                </div>
             </div>
         </div>
     </section>
-
 
     <div id="footer"></div>
 
