--- a/src/front/pages/medicos.html
+++ b/src/front/pages/medicos.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Medicos</title>
+    <title>Médicos</title>
     <link rel="stylesheet" href="/src/front/assets/css/medicos.css">
 </head>
 
 <body>
     <div id="header"></div>
-    <h1>Lista dos Médicos</h1>
+
+    <h1>Lista de Médicos</h1>
+
+    <div class="acoes-medico">
+        <button id="adicionar-medico">Adicionar Médico</button>
+        <input type="text" id="pesquisar-medico" placeholder="Pesquisar médico...">
+    </div>
+
     <table>
         <thead>
             <tr>
@@ -22,83 +29,50 @@
                 <th>Data de Nascimento</th>
                 <th>Telefone</th>
                 <th>Email</th>
+                <th>Ações</th>
             </tr>
         </thead>
-        <tbody>
-            <tr>
-                <td>Dra. Ana Silva</td>
-                <td>123456</td>
-                <td>Cardiologia</td>
-                <td>123.456.789-01</td>
-                <td>Feminino</td>
-                <td>15/04/1975</td>
-                <td>(11) 91234-5678</td>
-                <td>ana.silva@clinicamed.com</td>
-            </tr>
-            <tr>
-                <td>Dr. João Pereira</td>
-                <td>654321</td>
-                <td>Ortopedia</td>
-                <td>234.567.890-12</td>
-                <td>Masculino</td>
-                <td>08/09/1980</td>
-                <td>(21) 99876-5432</td>
-                <td>joao.pereira@clinicamed.com</td>
-            </tr>
-            <tr>
-                <td>Dra. Marina Costa</td>
-                <td>789012</td>
-                <td>Pediatria</td>
-                <td>345.678.901-23</td>
-                <td>Feminino</td>
-                <td>22/12/1983</td>
-                <td>(31) 98765-4321</td>
-                <td>marina.costa@clinicamed.com</td>
-            </tr>
-            <tr>
-                <td>Dr. Lucas Andrade</td>
-                <td>456789</td>
-                <td>Dermatologia</td>
-                <td>456.789.012-34</td>
-                <td>Masculino</td>
-                <td>03/06/1979</td>
-                <td>(11) 93456-7890</td>
-                <td>lucas.andrade@clinicamed.com</td>
-            </tr>
-            <tr>
-                <td>Dra. Paula Mendes</td>
-                <td>321654</td>
-                <td>Ginecologia</td>
-                <td>567.890.123-45</td>
-                <td>Feminino</td>
-                <td>10/10/1987</td>
-                <td>(51) 91234-5678</td>
-                <td>paula.mendes@clinicamed.com</td>
-            </tr>
-            <tr>
-                <td>Dr. Bruno Almeida</td>
-                <td>112233</td>
-                <td>Neurologia</td>
-                <td>678.901.234-56</td>
-                <td>Masculino</td>
-                <td>19/03/1972</td>
-                <td>(71) 99887-6655</td>
-                <td>bruno.almeida@clinicamed.com</td>
-            </tr>
+        <tbody id="tabela-medicos">
+            <!-- Médicos fixos ou renderizados dinamicamente -->
         </tbody>
     </table>
-    
+
     <div id="footer"></div>
 
-    <script>
-        fetch('../components/header.html')
-            .then(res => res.text())
-            .then(data => document.getElementById('header').innerHTML = data);
+    <div id="modal-medico" class="modal">
+        <div class="modal-content">
+            <h2>Adicionar Médico</h2>
+            <form id="form-medico">
+                <label>Nome:</label>
+                <input type="text" required>
+                <label>CRM:</label>
+                <input type="text" required>
+                <label>Especialidade:</label>
+                <input type="text" required>
+                <label>CPF:</label>
+                <input type="text" required>
+                <label>Sexo:</label>
+                <select required>
+                    <option value="">Selecione</option>
+                    <option>Masculino</option>
+                    <option>Feminino</option>
+                    <option>Outro</option>
+                </select>
+                <label>Data de Nascimento:</label>
+                <input type="date" required>
+                <label>Telefone:</label>
+                <input type="text" required>
+                <label>Email:</label>
+                <input type="email" required>
+                <div class="actions">
+                    <button type="button" id="cancelar-modal">Cancelar</button>
+                    <button type="submit">Salvar</button>
+                </div>
+            </form>
+        </div>
+    </div>
 
-        fetch('../components/footer.html')
-            .then(res => res.text())
-            .then(data => document.getElementById('footer').innerHTML = data);
-    </script>
+    <script src="/src/front/assets/js/medico.js"></script>
 </body>
 
 </html>
