--- a/src/front/pages/historico.html
+++ b/src/front/pages/historico.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Historico</title>
   <link rel="stylesheet" href="/src/front/assets/css/historico.css">
-  <script src="/src/front/assets/js/historico.js"></script>
 </head>
 
 <body>
@@ -16,27 +15,22 @@
   <table id="tabela-historico">
     <thead>
       <tr>
-        <th>Paciente</th>
-        <th>Especialidade</th>
-        <th>Data</th>
-        <th>Horário</th>
+        <th>ID</th>
+        <th>Médico ID</th>
+        <th>Paciente ID</th>
+        <th>CRM</th>
+        <th>Nº Carteirinha</th>
+        <th>Data Consulta</th>
+        <th>Status ID</th>
+        <th>Descrição</th>
       </tr>
     </thead>
     <tbody>
       <!-- Lançar o histórico AQ -->
     </tbody>
   </table>
-
   <div id="footer"></div>
-  <script>
-    fetch('../components/header.html')
-      .then(res => res.text())
-      .then(data => document.getElementById('header').innerHTML = data);
-
-    fetch('../components/footer.html')
-      .then(res => res.text())
-      .then(data => document.getElementById('footer').innerHTML = data);
-  </script>
+  <script src="/src/front/assets/js/historico.js"></script>
 </body>
 
 </html>
